crates/neenee-cli/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__bash_running_streams_live_preview.snap
---
source: crates/neenee-cli/src/tui/render/snapshot_tests.rs
assertion_line: 324
expression: "render_grid(&m, 80, 24)"
---
  + Run cargo build

backgrounds:
.=reset  B=#070808
0: .2 B76
