crates/neenee-cli/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__edit_file_multihunk_interleaves_changes.snap
---
source: crates/neenee-cli/src/tui/render/snapshot_tests.rs
assertion_line: 292
expression: "render_grid(&m, 80, 40)"
---
  - Edit a.rs +2 -2

     1   fn one() {
     2 -     return 1;
     2 +     return 10;
     3   }
     4
     5   fn two() {
     6 -     return 2;
     6 +     return 20;
     7   }

backgrounds:
.=reset  B=#070808  C=#111312  D=#201414  E=#402828  F=#121F16  G=#2A4030
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 D18 E2 D56
4: .2 F18 G3 F55
5: .2 C76
6: .2 C76
7: .2 C76
8: .2 D18 E2 D56
9: .2 F18 G3 F55
10: .2 C76
