crates/neenee-cli/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__list_dir_expanded_renders_listing.snap
---
source: crates/neenee-cli/src/tui/render/snapshot_tests.rs
assertion_line: 303
expression: "render_grid(&m, 80, 30)"
---
  - List .

    src/
    tests/
    Cargo.toml
    README.md

backgrounds:
.=reset  B=#070808  C=#111312
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
