crates/neenee-cli/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__tool_step_detail_overlay_renders_full_shell_output.snap
---
source: crates/neenee-cli/src/tui/render/snapshot_tests.rs
assertion_line: 363
expression: "rows.join(\"\\n\")"
---


  ┃Run cargo test · 0ms
  ┃
  ┃$ cargo test
  ┃running 3 tests
  ┃...
  ┃test result: ok. 3 passed
  ┃warning: unused import
  ┃
  ┃ ↑/↓ or wheel scroll · esc close
  ┃
